<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.HomeNaoLogadaActivity"
        tools:ignore="ExtraText">

<!--        // Imagem de fundo-->

        <ImageView
            android:id="@+id/imageView_marca_dagua"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:alpha="0.4"
            android:scaleType="centerCrop"
            android:src="@drawable/fundonovo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

<!--        // Imagem da Lixeira "Logotipo"-->

        <ImageView
            android:id="@+id/imageView_logo_lixeira"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/logo_sem_fundo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp" />

<!--        // Texto "Don't Waste"-->

        <TextView
            android:id="@+id/text_campo_nome_do_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/dont_waste"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_logo_lixeira" />

<!--        // Texto "Organize"-->

        <TextView
            android:id="@+id/text_campo_nome_complementar_do_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/organize"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_campo_nome_do_app" />

<!--        // Texto "Sua despensa inteligente"-->

        <TextView
            android:id="@+id/text_slogan_do_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/sua_despensa_inteligente"
            android:textColor="@color/cor_texto"
            android:textSize="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_campo_nome_complementar_do_app"/>

        // Botão Primeiro Acesso

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_primeiro_acesso"
            android:layout_width="168dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/primeiro_acesso"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/button_login"/>

        // Botão Login

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="168dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/color_button"
            android:fontFamily="@font/open_sans_bold"
            android:text="Login"
            android:textSize="15sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>


    </data>
</layout>