<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.projeto_dont_waste.viewmodel.CadastroViewModel" />

        <variable
            name="context"
            type="android.content.Context" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ContainerActivity"
        tools:ignore="ExtraText">

        <!--        //Botão Home não logada-->

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/homeCadastro_primeira_tela"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:onClick="@{() -> viewmodel.clickHome()}"
            android:src="@drawable/cadastro_1_icone_home"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        // Imagem Usuario-->

        <ImageView
            android:id="@+id/appCompatImageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/cadastro_1_icone_usuario"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeCadastro_primeira_tela" />

        <!--        //EditText Email-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginRight="16dp"
            android:hint="@string/email_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@{viewmodel.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        // EditText Senha-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textSenha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/senha_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:text="@{viewmodel.senha}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        //Image Button "?"-->

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView_esquecisenha"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:onClick="@{() -> viewmodel.clickAjuda()}"
            android:src="@drawable/cadastro_1_icone_ajuda"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSenha" />

        <!--        // Botão Proximo-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonProximoCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/color_button_cinza"
            android:onClick="@{() -> viewmodel.clickProximo()}"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/proximo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>