<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.projeto_dont_waste.viewmodel.SegundaTelaCadastroViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SegundaTelaDeCadastroActivity"
        tools:ignore="ExtraText">

        <!--            //Botão Home não logada-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView_home"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_margin="32dp"
            android:onClick="@{()->viewmodel.voltarParaHome()}"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/cadastro_1_icone_home"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!--            // Image Bonequinho-->
        <ImageView
            android:id="@+id/imageView_user_segunda_tela"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/cadastro_1_icone_usuario"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_home"/>

        <!--            // EditText Nome-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_nome_cadastro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginRight="16dp"
            android:hint="Nome:"
            android:background="@drawable/bordar_costumizado"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_user_segunda_tela">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_nome_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.onNomeUsuario}"/>

        </com.google.android.material.textfield.TextInputLayout>


        <!--            <com.google.android.material.textfield.TextInputLayout-->
        <!--                android:id="@+id/txt_nome_cadastro"-->
        <!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="16dp"-->
        <!--                android:hint="@string/name"-->
        <!--                app:layout_constraintLeft_toLeftOf="parent"-->
        <!--                app:layout_constraintRight_toRightOf="parent"-->
        <!--                app:layout_constraintTop_toBottomOf="@+id/imageView_user_segunda_tela">-->

        <!--                <com.google.android.material.textfield.TextInputEditText-->
        <!--                    android:id="@+id/editText_nome_cadastro"-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:background="@color/white"/>-->

        <!--            </com.google.android.material.textfield.TextInputLayout>-->
        <!--            // Text Quantidade de pessoas-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_quantidade_pessoas"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bordar_costumizado"
            android:hint="@string/residents"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_nome_cadastro">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/textView_quantidade_pessoas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="none"
                android:onClick="@{()->viewmodel.quantidadePessoas()}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--            // TextData-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_data_ultima_compra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bordar_costumizado"
            android:hint="@string/date_of_last_purchase"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_quantidade_pessoas">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_data_ultima_compra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:editable="false"
                android:inputType="none"
                android:onClick="@{()->viewmodel.criacaoDatePicker()}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--            // Text Frequencia de compras-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bordar_costumizado"
            android:hint="@string/shopping_frequency"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput_data_ultima_compra">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/textInput_frequencia_compras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="none"
                android:onClick="@{()->viewmodel.frequenciaCompra()}"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_voltar_segunda_tela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_button_cinza"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_margin="16dp"
            android:text="Voltar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:onClick="@{()->viewmodel.botaoVoltar()}"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_salvar_segunda_tela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/color_button"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="Salvar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="@{()->viewmodel.botaoSalvar()}"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>


